[gd_scene load_steps=11 format=1]

[ext_resource path="res://assets/graphics/ships/dock_normal.png" type="Texture" id=1]
[ext_resource path="res://assets/graphics/ships/dock.png" type="Texture" id=2]
[ext_resource path="res://res/stations/station_parts/StationDock.gd" type="Script" id=3]
[ext_resource path="res://assets/graphics/particles/engineflare.png" type="Texture" id=4]
[ext_resource path="res://ref/ColorRamps/white_smoke.res" type="ColorRamp" id=5]

[sub_resource type="CanvasItemShader" id=14]

_code = { "fragment":"uniform texture normal;\n//normal maps expect Y-up, but 2D is Y-down, so must mirror this.\nNORMAL = tex(normal,UV).rgb * vec3(2.0,-2.0,1.0) - vec3(1.0,-1.0,0.0);", "fragment_ofs":0, "light":"", "light_ofs":0, "vertex":"", "vertex_ofs":0 }

[sub_resource type="CanvasItemMaterial" id=15]

shader/shader = SubResource( 14 )
shader/shading_mode = 0
shader_param/normal = ExtResource( 1 )

[sub_resource type="ConvexPolygonShape2D" id=16]

custom_solver_bias = 0.0
points = Vector2Array( 0, 0, 2, 0, 0, 1 )

[sub_resource type="ConvexPolygonShape2D" id=17]

custom_solver_bias = 0.0
points = Vector2Array( 0, 1, -2, 0, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=18]

custom_solver_bias = 0.0
points = Vector2Array( 7, -8, 7, 7, -7, 7, -7, -8 )

[node name="StationDock" type="Sprite"]

material/material = SubResource( 15 )
texture = ExtResource( 2 )
flip_v = true
script/script = ExtResource( 3 )
dock_name = "Alpha"

[node name="PointA" type="Area2D" parent="."]

transform/pos = Vector2( -7, 6.2 )
input/pickable = true
shapes/0/shape = SubResource( 16 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PointA"]

build_mode = 0
polygon = Vector2Array( 0, 0, 2, 0, 0, 1 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="PointB" type="Area2D" parent="."]

transform/pos = Vector2( 7, 6.2 )
input/pickable = true
shapes/0/shape = SubResource( 17 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PointB"]

build_mode = 0
polygon = Vector2Array( 0, 0, -2, 0, 0, 1 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="SteamLeft" type="Particles2D" parent="."]

visibility/behind_parent = true
transform/pos = Vector2( 7, 4 )
config/amount = 16
config/lifetime = 1.0
config/emit_timeout = 4.0
config/emitting = false
config/explosiveness = 0.9
config/texture = ExtResource( 4 )
params/direction = 90.0
params/spread = 2.0
params/linear_velocity = 10.0
params/spin_velocity = 1.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 1.0
params/initial_angle = 5.0
params/initial_size = 0.2
params/final_size = 0.5
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/linear_velocity = 0.1
randomness/damping = 1.0
randomness/initial_angle = 1.0
randomness/final_size = 0.5
color/color_ramp = ExtResource( 5 )

[node name="SteamRight" type="Particles2D" parent="."]

visibility/behind_parent = true
transform/pos = Vector2( -7, 4 )
config/amount = 16
config/lifetime = 1.0
config/emit_timeout = 4.0
config/emitting = false
config/explosiveness = 0.9
config/texture = ExtResource( 4 )
params/direction = 270.0
params/spread = 2.0
params/linear_velocity = 10.0
params/spin_velocity = 1.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 1.0
params/initial_angle = 5.0
params/initial_size = 0.2
params/final_size = 0.5
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/linear_velocity = 0.1
randomness/damping = 1.0
randomness/initial_angle = 1.0
randomness/final_size = 0.5
color/color_ramp = ExtResource( 5 )

[node name="Pointer" type="Polygon2D" parent="."]

visibility/visible = false
z/z = 9
z/relative = false
polygon = Vector2Array( -1, -6, -1, 4, -2, 4, 0, 6, 2, 4, 1, 4, 1, -6 )
uv = Vector2Array(  )
color = Color( 0.285156, 0.731934, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Body" type="RigidBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 18 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0

[node name="Collision" type="CollisionPolygon2D" parent="Body"]

build_mode = 0
polygon = Vector2Array( -7, -8, -7, 7, 7, 7, 7, -8 )
shape_range = Vector2( 0, 0 )
trigger = false


